force-app/main/default/src/objects/PJN_Event_Creation__mdt/PJN_Event_Creation__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Fulfillment Request Creation
Purpose: Defines the fields that will be pre-populated when a fulfillment request is created.
Metadata Relationship(s): Program
Created by Mavens: Yes</description>
    <label>Event Creation</label>
    <pluralLabel>Events Creation</pluralLabel>
</CustomObject>