force-app/main/default/src/objects/PJN_Event_Creation__mdt/fields/PJN_Care_Plan_Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Source_Field_API_Name__c</fullName>
    <label>Care Plan Source Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>