force-app/main/default/src/objects/PJN_Event_Creation__mdt/fields/PJN_Mapping_Object_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Mapping_Object_Type_Name__c</fullName>
    <label>Mapping Object Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>