force-app/main/default/src/objects/PJN_Event_Creation__mdt/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <label>Program</label>
    <referenceTo>PJN_Program__mdt</referenceTo>
    <relationshipLabel>Events Creation</relationshipLabel>
    <relationshipName>PJN_Events_Creation</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>