force-app/main/default/src/objects/PJN_Event_Creation__mdt/listViews/PJN_All_Events_Creations.listView-meta.xml
<ListView>
    <fullName>PJN_All_Events_Creations</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Program__c</columns>
    <columns>PJN_Record_Type_Developer_Name__c</columns>
    <columns>PJN_Mapping_Object_Type_Name__c</columns>
    <columns>PJN_Care_Plan_Source_Field_API_Name__c</columns>
    <columns>PJN_Request_Target_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Events Creations</label>
    <language>en_US</language>
</ListView>